# ed-sh2-sb-3dproject

./: .gitignore  CMakeLists.txt  MANUAL_MIGRATION_GUIDE.md  README.md  REFACTORING_STATUS.md  campus.generated.json  campus.json  contexto.md  imgui.ini
EcoCampusNav/: CMakeLists.txt  CMakePresets.json  README.md  campus.json  settings.json
EcoCampusNav/src/: main.cpp
EcoCampusNav/src/core/graph/: Algorithms.cpp  Algorithms.h  CampusGraph.cpp  CampusGraph.h  Edge.h  Node.h
EcoCampusNav/src/repositories/: JsonGraphRepository.cpp  JsonGraphRepository.h
EcoCampusNav/src/services/: ComplexityAnalyzer.cpp  ComplexityAnalyzer.h  NavigationService.cpp  NavigationService.h  ResilienceService.cpp  ResilienceService.h  ScenarioManager.cpp  ScenarioManager.h
EcoCampusNav/src/ui/: BfsTab.cpp  BfsTab.h  CampusMapView.cpp  CampusMapView.h  ComplexityTab.cpp  ComplexityTab.h  ConnectivityTab.cpp  ConnectivityTab.h  DfsTab.cpp  DfsTab.h  EdgeItem.cpp  EdgeItem.h  MainWindow.cpp  MainWindow.h  NodeItem.cpp  NodeItem.h  PathfindTab.cpp  PathfindTab.h  ResilienceTab.cpp  ResilienceTab.h  ScenarioTab.cpp  ScenarioTab.h
assets/: interest_zones.json  intro_tour_paths.json  intro_tour_recordings.json
assets/maps/: Exteriorcafeteria.tmj  Interiorcafeteria.tmj  Paradadebus.tmj  biblio.tmj  easter_egg.tmj  piso 4.tmj  piso 5.tmj  piso1.tmj  piso2.tmj  piso3.tmj  rooms.json
assets/narrative/: dialogues.json
assets/shaders/: fragment.glsl  vertex.glsl
assets/tilesets/: Interiores.tsx  Modern_Exteriors_Complete_Tileset.tsx  Room_Builder_16x16.tsx
src/: main.cpp
src/core/: EventBus.cpp  EventBus.h  GameLoop.cpp  GameLoop.h
src/core/application/: ApplicationSession.cpp  ApplicationSession.h  AudioInitializer.cpp  AudioInitializer.h  WindowInitializer.cpp  WindowInitializer.h
src/core/graph/: Algorithms.cpp  Algorithms.h  CampusGraph.cpp  CampusGraph.h
src/core/runtime/: SceneRuntimeTypes.h
src/entity/: Door.cpp  Door.h  Player.cpp  Player.h
src/helpers/: NavigationHelpers.cpp  NavigationHelpers.h
src/input/: InputHandler.h
src/narrative/: Narrator.cpp  Narrator.h
src/render/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
src/runtime/: GameController.cpp  GameController.h  GameplayLoopController.cpp  GameplayLoopController.h  InputManager.cpp  InputManager.h  InputState.h  MIGRATION_SUMMARY.md  RenderContext.h  RuntimeAnimationManager.cpp  RuntimeAnimationManager.h  RuntimeCameraManager.cpp  RuntimeCameraManager.h  RuntimeGameManager.h  RuntimeInfoMenuManager.h  RuntimeInfoMenuManager_migration.md  RuntimeInitManager.cpp  RuntimeInitManager.h  RuntimeMinimapManager.cpp  RuntimeMinimapManager.h  RuntimeNavigationManager.cpp  RuntimeNavigationManager.h  RuntimeOverlayManager.cpp  RuntimeOverlayManager.h  RuntimePlayerManager.cpp  RuntimePlayerManager.h  RuntimeTransitionManager.cpp  RuntimeTransitionManager.h  RuntimeUiManager.cpp  RuntimeUiManager.h  SceneManager.cpp  SceneManager.h  UIManager.cpp  UIManager.h
src/scene/: Room.h  SceneManager.cpp  SceneManager.h  VCRoad.cpp  VCRoad.h
src/services/: AssetPathResolver.cpp  AssetPathResolver.h  AudioManager.cpp  AudioManager.h  ComplexityAnalyzer.cpp  ComplexityAnalyzer.h  DataManager.cpp  EasterEggManager.cpp  EasterEggManager.h  InterestZoneLoader.cpp  InterestZoneLoader.h  IntroTourConfigLoader.cpp  IntroTourConfigLoader.h  MapRenderService.cpp  MapRenderService.h  MusicService.cpp  MusicService.h  NavigationService.cpp  NavigationService.h  ResilienceService.cpp  ResilienceService.h  RuntimeBlockerService.cpp  RuntimeBlockerService.h  RuntimeTextService.cpp  RuntimeTextService.h  ScenarioManager.cpp  ScenarioManager.h  ScenePlanService.cpp  ScenePlanService.h  SoundEffectService.cpp  SoundEffectService.h  SpriteAnimationService.cpp  SpriteAnimationService.h  StringUtils.cpp  StringUtils.h  TransitionService.cpp  TransitionService.h  WalkablePathService.cpp  WalkablePathService.h
src/services/initialization/: FloorLinkLoader.cpp  FloorLinkLoader.h  SceneBootstrap.cpp
src/ui/: ComplexityTab.cpp  ComplexityTab.h  PathfindTab.cpp  TabManager.cpp  TabManager.h
